--- a/index.html
+++ b/index.html
@@ -1,115 +1,190 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-         <meta charset="utf-8">
-         <title>imfunny</title>
-         <meta name="Description" content="hi imfunny, a Junior front-end developer who’s comfortable with the server-side.">
-         <meta name="Keywords" content="front-end developer , web developer ,junior web developer">
-         <meta name="robots" content="index, nofollow">
-         <meta name="language" content="english">
-         <meta name="twitter:card" content="summary">
-         <meta name="twitter:url" content="https://imfunniee.github.io">
-         <meta name="twitter:title" content="imfunny">
-         <meta name="twitter:description" content="hi imfunny, a Junior front-end developer who’s comfortable with the server-side.">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="          crossorigin="anonymous"></script>
-         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"          integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-         <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>imfunny.</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"          integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
-  <body>
-   <div id="center-div" class="animated zoomIn" style="-webkit-animation-delay:0.3s;animation-delay:0.3s;">
-    <div id="inner-div">
-      <div id="header"  class="animated rollIn" style="-webkit-animation-delay:1s;animation-delay:1s;">
-          <div id="header-links">
-            <a href="#projects">projects</a>
-            <a href="#about">skills</a>
-            <a href="#contact">contact</a>
-          </div>
-      </div>
-      <div id="what-dude"><center><div id="typehere"></div></center></div>
-      <div id="what-second-div" class="animated zoomIn" style="-webkit-animation-delay:1s;animation-delay:1s;">
-        <a href="https://www.youtube.com/channel/UCQW3CrWkkYdRl8UZw75MPIg" target="_blank"><i class="fab fa-youtube what-second-div"></i></a>
-        <a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
-       <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
-      </div>
+<body id="body">
+<div class="animated fadeIn">
+    <center>
+    <div id="middle">
+            <div id="header">
+                    <div id="title">imfunny.</div><br>
+                    <div id="links">
+                        <a href="#about">skills</a>
+                        <a href="#work" id="wtf">works</a>
+                        <a href="#contact">contact</a>
+                    </div>
+                    </div>
+        <div id="tagline">
+            <b id="typehere"></b>
+        </div>
     </div>
-    <div id="projects">
-      <p data-aos="fade-up">projects</p>
-      <center>
-      <div class="project-content">
-        <div id="p-name">meteo.</div>
-        <div id="p-desc">a simple weather web-app, build using yahoo's weather api</div>
-        <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-      </div>
-      <div class="project-content">
-        <div id="p-name">youtube redesign concept</div>
-        <div id="p-desc">i tried... :)</div>
-        <a href="https://dribbble.com/shots/5293016-Youtube-Redesign-Concept-1" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-      </div>
-      <div class="project-content">
-          <div id="p-name">todo list</div>
-          <div id="p-desc">a web-app to organize how to do the things you want to do</div>
-          <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-        </div>
-        <div class="project-content">
-          <div id="p-name">ismydevicecharging</div>
-          <div id="p-desc">idk why i even made this but ye it tells whether your device is charging or not</div>
-          <a href="https://imfunniee.github.io/ismydevicecharging/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-        </div>
-        <div class="project-content">
-            <div id="p-name">travel</div>
-            <div id="p-desc">a travel website layout/template/idea (under construction)</div>
-            <a href="https://imfunniee.github.io/travel/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-          </div>
-          <div class="project-content">
-              <div id="p-name">melvin</div>
-              <div id="p-desc">portfolio site for galaxy's (a youtube channel) owner melvin</div>
-              <a href="https://melvin.fun/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-            </div>
     </center>
+
+    <div id="portfolio">
+             <div id="about">
+                 <p>skills.</p>  
+                 <div>
+                 <center>
+                    <div id="skillset">
+                        <h4>HTML5/CSS3</h4>
+                        <div id="outer1"></div>
+                        <h4>94%</h4>
+                    </div>
+                    <div id="skillset">
+                            <h4>JavaScript/Jquery</h4>
+                            <div id="outer2"></div>
+                            <h4>73%</h4>
+                    </div>
+                    <div id="skillset">
+                            <h4>Frameworks</h4>
+                            <div id="outer3"></div>
+                            <h4>60%</h4>
+                    </div>
+                    <div id="skillset">
+                            <h4>UI/UX</h4>
+                            <div id="outer4"></div>
+                            <h4>70%</h4>
+                    </div>
+                    <div id="skillset">
+                            <h4>Backend</h4>
+                            <div id="outer5"></div>
+                            <h4>50%</h4>
+                    </div>
+                </center>
+
+                    <p></p><br>I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
+                    Although I'm very familiar with using frameworks, my websites are primarily hand-coded using HTML5, CSS3, SVG & JavaScript.</div> 
+             </div>
+         
+              <div id="work">
+                 <p>works.</p>
+
+                 <div class="project">
+                        <h1>meteo</h1>
+                        <h3>a simple weather web-app, build using yahoo's weather api</h3>
+                        <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                     <h1>youtube redesign concept</h1>
+                     <a href="https://dribbble.com/shots/5293016-Youtube-Redesign-Concept-1" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>todo list</h1>
+                        <h3>a web-app to organize how to do the things you want to do</h3>
+                        <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>ismydevicecharging</h1>
+                        <h3>idk why i even made this but ye it tells whether your device is charging or not</h3>
+                        <a href="https://imfunniee.github.io/ismydevicecharging/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>social</h1>
+                        <h3>a social networking profile page template</h3>
+                        <a href="https://imfunniee.github.io/social/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>travel</h1>
+                        <h3>a travel website layout/template/idea (under construction)</h3>
+                        <a href="https://imfunniee.github.io/travel/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>a portfolio website</h1>
+                        <h3>portfolio site for youtube channel galaxy and zeno (200k+ subscribers)</h3>
+                        <a href="https://melvin.fun/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                 </div>
+
+             </div>
+         
+              <div id="contact">
+                 <p>contact.</p> 
+                 <div id="details">
+                        <a href="https://www.youtube.com/channel/UCQW3CrWkkYdRl8UZw75MPIg" target="_blank"><i class="fab fa-youtube what-second-div"></i></a>
+                        <a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
+                       <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
+                       <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
+                 </div>   
+             </div>
     </div>
-    <div id="about">
-      <p id="skills">skills</p>
-      <div id="about-sub">
-          I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
-          <table>
-            <tr>
-              <td>HTML5, CSS3</td>
-              <td>JavaScript/Jquery</td>
-              <td>Node and Vue js</td>
-              <td>Responsive Design</td>
-            </tr>
-          </table>
-          Although I'm very familiar with using frameworks, my websites are primarily hand-coded using <span>HTML5</span>, <span>CSS3</span>, <span>SVG</span> & <span>JavaScript</span>.
-    </div>
-    <p id="contact">contact</p>
-          <h2>dm me on instagram or leave a comment on my github repository</h2>
-          <br>
-          <h3><a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram idk"></i></a>
-          <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github idk"></i></a></h3>
-    </div>
-    <center><p style="margin-bottom:60px;"><b>made by imfunny with love and a keyboard</b></p></center>
-   </div>
-   <script type="text/javascript">
-   var typed = new Typed('#typehere', {
-    strings: ["hi imfunny, a <span> 17yo Junior front-end developer</span> who’s comfortable with the <span>server-side</span>."],
-    typeSpeed: 30,
+</div>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+<script>
+    var typed = new Typed('#typehere', {
+    strings: ["hi imfunny, a <span> 17yo Junior front-end developer</span> who’s comfortable with the <span>server-side</span>.<br><a href='#portfolio'><button>scroll down</button></a>"],
+    typeSpeed: 28,
     smartBackspace: true,
-    backSpeed: 30,
+    backSpeed: 28,
     showCursor: false,
-    startDelay: 2200
+    startDelay: 200
    });
 
-  $(document).ready(function(){
-    AOS.init();
+   var circle = new ProgressBar.Circle('#outer1', {
+   color: '#282828',
+   strokeWidth: 8,
+   easing: 'easeInOut',
+   duration: 2000,
+   });
+   var circle2 = new ProgressBar.Circle('#outer2', {
+   color: '#282828',
+   strokeWidth: 8,
+   easing: 'easeInOut',
+   duration: 2000,
+   });
+   var circle3 = new ProgressBar.Circle('#outer3', {
+   color: '#282828',
+   strokeWidth: 8,
+   easing: 'easeInOut',
+   duration: 2000,
+   });
+   var circle4 = new ProgressBar.Circle('#outer4', {
+   color: '#282828',
+   strokeWidth: 8,
+   easing: 'easeInOut',
+   duration: 2000,
+   });
+   var circle5 = new ProgressBar.Circle('#outer5', {
+   color: '#282828',
+   strokeWidth: 8,
+   easing: 'easeInOut',
+   duration: 2000,
+   });
+   $(window).scroll(function() {
+   var hT = $('#tagline').offset().top,
+   hH = $('#tagline').outerHeight(),
+   wH = $(window).height(),
+   wS = $(this).scrollTop();
+   if (wS > (hT+hH-wH) && (hT < wS) && (wS+wH > hT+hH)){
+   circle.animate(0.94);  
+   circle2.animate(0.73); 
+   circle3.animate(0.60);  
+   circle4.animate(0.70); 
+   circle5.animate(0.50);
+   }
+   });
+
+   $(document).ready(function(){
   $("a").on('click', function(event) {
     if (this.hash !== "") {
       event.preventDefault();
       var hash = this.hash;
-      $('#center-div').animate({
+      $('body,html').animate({
       scrollTop: $(hash).offset().top
       }, 1500, function(){
       window.location.hash = hash;
@@ -117,6 +192,6 @@
      } 
     });
   });
-   </script>
-  </body>
+</script>
+</body>
 </html>
