--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script>
     var typed = new Typed('#typehere', {
-    strings: ["hi imfunny, a <span>Junior front-end developer</span> & <span>UI/UX Designer</span> who’s comfortable with the <span>server-side</span>.<br><a href='#portfolio'><button>scroll down</button></a>"],
+    strings: ["hi imfunny, a <span>Junior front-end developer</span> and <span>UI/UX Designer</span> who’s comfortable with the <span>server-side</span>.<br><a href='#portfolio'><button>scroll down</button></a>"],
     typeSpeed: 28,
     smartBackspace: true,
     backSpeed: 28,
