--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,6 @@
     <meta property="og:title" content="imfunny.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://imfunniee.github.io/">
-    <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
     <title>imfunny.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
@@ -117,10 +116,12 @@
                 </div>
 
                 <div id="design" style="display:none;">
+                    <div class="project">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1_4x.png">
+                    </div>
                      <div class="project">
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif">
                      </div>
-     
                      <div class="project">
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5377526/lol_4x.png">
                      </div>
