--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
              <div id="about">
                  <p>skills.</p>  
                  <div>
-                   <h2>Frontend Development</h2>
+                <p>
+                   <h2><i class="fas fa-code"></i> Frontend Development</h2>
                    <table>
                        <tr>
                            <td>HTML5</td>
@@ -51,7 +52,9 @@
                            <td>Vue (beginner)</td>
                        </tr>
                    </table>
-                   <h2>Backend Development</h2>
+                </p>
+                <p>
+                   <h2><i class="fas fa-server"></i> Backend Development</h2>
                    <table>
                        <tr>
                            <td>NodeJS</td>
@@ -59,7 +62,9 @@
                            <td>Firebase</td>
                        </tr>
                    </table>
-                   <h2>UI/UX Design</h2>
+                </p>
+                <p>
+                   <h2><i class="fas fa-pencil-alt"></i> UI/UX Design</h2>
                    <table>
                        <tr>
                            <td>Adobe xD</td>
@@ -69,7 +74,9 @@
                            <td>Microsoft Paint :p</td>
                        </tr>
                    </table>
-                   <h2>¯\_(ツ)_/¯</h2>
+                </p>
+                <p>
+                   <h2>🤷</h2>
                    <table>
                     <tr>
                         <td>Dialogflow</td>
@@ -77,9 +84,14 @@
                         <td>3dsMax</td>
                         <td>Unity</td>
                     </tr>
-                </table>
-                    <p></p><br>I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
-                    Although I'm very familiar with using frameworks, my websites are primarily hand-coded using HTML5, CSS3, SVG & JavaScript.</div> 
+                    </table>
+                </p>
+
+                    <p></p>
+                    I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
+                    Although I'm very familiar with using frameworks, my websites are primarily hand-coded using HTML5, CSS3, SVG & JavaScript.
+                    <p></p>
+                </div> 
              </div>
          
               <div id="work">
