--- a/index.html
+++ b/index.html
@@ -103,30 +103,35 @@
                         <h1>meteo</h1>
                         <h3>a simple weather web-app, build using yahoo's weather api</h3>
                         <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/meteo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
 
                  <div class="project">
                         <h1>todo list</h1>
                         <h3>a web-app to organize how to do the things you want to do</h3>
                         <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/todo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
 
                  <div class="project">
                         <h1>ismydevicecharging</h1>
                         <h3>idk why i even made this but ye it tells whether your device is charging or not</h3>
                         <a href="https://imfunniee.github.io/ismydevicecharging/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/ismydevicecharging" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
 
                  <div class="project">
                         <h1>social</h1>
                         <h3>a social networking profile page template</h3>
                         <a href="https://imfunniee.github.io/social/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/social" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
 
                  <div class="project">
                         <h1>travel</h1>
                         <h3>a travel website layout/template/idea (under construction)</h3>
                         <a href="https://imfunniee.github.io/travel/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/travel" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
 
                  <div class="project">
