--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
               <div id="contact">
                  <p>contact.</p> 
                  <div id="details">
-                        <a href="https://www.youtube.com/channel/UCQW3CrWkkYdRl8UZw75MPIg" target="_blank"><i class="fab fa-youtube what-second-div"></i></a>
-                        <a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
+                       <a href="mailto:imfunny@getnada.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
                        <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                  </div>   
