--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                        <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                  </div>   
              </div>
+             <center><b>made on earth by a human</b></center>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
@@ -191,11 +192,11 @@
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
     strings: ["hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side.<br><a href='#portfolio'>scroll down</a>"],
-    typeSpeed: 28,
+    typeSpeed: 22,
     smartBackspace: true,
-    backSpeed: 28,
+    backSpeed: 26,
     showCursor: false,
-    startDelay: 200
+    startDelay: 220
    });
    $(document).ready(function(){
     $("a").on('click', function(event) {
@@ -204,7 +205,7 @@
       var hash = this.hash;
       $('body,html').animate({
       scrollTop: $(hash).offset().top
-      }, 1500, function(){
+      }, 1400, function(){
       window.location.hash = hash;
       });
       } 
