--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                            <td>Photoshop</td>
                            <td>After Effects</td>
                            <td>Gimp 2</td>
-                           <td>Microsoft Paint :p</td>
+                           <td>Pencil & Paper :p</td>
                        </tr>
                    </table>
                 </p>
