--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <meta property="og:title" content="imfunny.">
     <meta property="og:type" content="website">
     <meta property="og:description" content="hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side." />
-    <meta property="og:image" content="og.png">
+    <meta property="og:image" content="https://imfunniee.github.io/og.png">
     <meta property="og:url" content="https://imfunniee.github.io/">
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="imfunny.">
+    <meta property="twitter:description" content="hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side." />
+    <meta property="twitter:image" content="https://imfunniee.github.io/og.png">
+    <meta property="twitter:url" content="https://imfunniee.github.io/">
     <link rel="icon" href="icon.png" type="image/png" />
     <title>imfunny.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
