--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <script src="index.js" type="text/JavaScript"></script>
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
-    strings: ["hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side.<br><a href='#portfolio'>scroll down</a>"],
+    strings: ["hi imfunny, a front-end developer and UI/UX Designer who’s comfortable with the server-side.<br><a href='#portfolio'>scroll down</a>"],
     typeSpeed: 22,
     smartBackspace: true,
     backSpeed: 26,
