--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="twitter:image" content="https://imfunniee.github.io/og.png">
     <meta property="twitter:url" content="https://imfunniee.github.io/">
     <link rel="icon" href="icon.png" type="image/png" />
+    <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
     <title>imfunny.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
